--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -376,31 +376,31 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/23/n10242561.md#1" target="_blank">袁斌：方志敏的“清贫”</a></li><li><a href="https://github.com/sjgjny386/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/9/12/n9623688.md#1" target="_blank">比利时母亲30年车祸创痛 读转法轮4个月消失</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/22/n10994378.md#1" target="_blank">陆文：迫害佛法最终害了自己</a></li><li><a href="https://github.com/sjgjny386/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/15/n10977742.md#1" target="_blank">伊朗姑娘嘉扎尔?塔瓦纳艾(2) 历练的旅程</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/14/n12474369.md#1">日本出现“UFO空战”画面 多个追赶一个</a></li>
-<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/16/n12479879.md#1">曾预言川普当选 传教士：上帝派天使助连任</a></li>
-<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/9/30/n12440550.md#1">《圣经》与《推背图》预言的应验与变换1</a></li>
-<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/9/3/n12378281.md#1">【西安事变?蒋宋夫妇】天降神谕 使命之行</a></li>
-<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/9/17/n12411954.md#1">东西方地狱见闻 邪淫者的悲声</a></li>
-<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12483231.md#1">【珍言真语】桑普：习近平南巡 上演障眼法</a></li>
-<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12484332.md#1">【严真点评&amp;外交部大实话】拜登家丑闻 习南巡</a></li>
-<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12485056.md#1">【薇羽看世间】习近平南巡谈改革 走入死胡同</a></li>
-<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/16/n12481651.md#1">【新闻看点】习突返京或3原因 拜登家丑闻连爆</a></li>
-<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12482129.md#1">赵立坚诬蔑美军播毒论令川普愤怒至极</a></li>
-<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12482636.md#1">大陆二手房市场分化严重 房地产泡沫要破？</a></li>
-<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/16/n12481456.md#1">刘诗诗自曝不愿上综艺 个中原因令人吃惊</a></li>
-<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/16/n12481895.md#1">传周星驰重金续约林允 为对赌协议添保障</a></li>
-<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12484792.md#1">洪金宝拄拐杖近照曝光 网民惊讶</a></li>
-<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12484953.md#1">章子怡产后首秀 发际线上移引热议</a></li>
-<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12482595.md#1">TWICE定延心理不安 暂不参与正规二辑等活动</a></li>
-<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/6/n12455916.md#1">运动后吃对修复肌肉、改善疲劳 营养师推3食谱</a></li>
-<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/16/n12481202.md#1">换季流鼻水、皮肤痒？过敏自救有一套</a></li>
-<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12484089.md#1">两大一小的白鲸搁浅 俄罗斯男子花7小时营救</a></li>
-<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/16/n12481545.md#1">自制3杯天然运动饮料 提升免疫力、改善疲劳</a></li>
-<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12483851.md#1">意大利小镇仅住2人 但坚持戴口罩保持距离</a></li>
+<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/14/n12474369.md#1">日本出现“UFO空战”画面 多个追赶一个</a></li>
+<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/2/14/n11869946.md#1">大疫下解救有道 历史启示带您闯过中共肺炎</a></li>
+<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/16/n12479879.md#1">曾预言川普当选 传教士：上帝派天使助连任</a></li>
+<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/9/30/n12440550.md#1">《圣经》与《推背图》预言的应验与变换1</a></li>
+<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/9/3/n12378281.md#1">【西安事变?蒋宋夫妇】天降神谕 使命之行</a></li>
+<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487211.md#1">【大选观察】拜登的烫手山芋：扩充最高法院</a></li>
+<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12486847.md#1">【珍言真语】梁锦祥：拜登丑闻曝中共靠港漂白</a></li>
+<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/8/n12461525.md#1">【纽约调查】纽约百年来10场 大运动带来的变化</a></li>
+<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/16/n12481651.md#1">【新闻看点】习突返京或3原因 拜登家丑闻连爆</a></li>
+<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/17/n12482129.md#1">赵立坚诬蔑美军播毒论令川普愤怒至极</a></li>
+<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/17/n12482636.md#1">大陆二手房市场分化严重 房地产泡沫要破？</a></li>
+<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12484792.md#1">洪金宝拄拐杖近照曝光 网民惊讶</a></li>
+<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/16/n12481895.md#1">传周星驰重金续约林允 为对赌协议添保障</a></li>
+<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12484953.md#1">章子怡产后首秀 发际线上移引热议</a></li>
+<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/17/n12482595.md#1">TWICE定延心理不安 暂不参与正规二辑等活动</a></li>
+<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12485042.md#1">陈坤准时为周迅庆生 连续11年从未中断</a></li>
+<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/6/n12455916.md#1">运动后吃对修复肌肉、改善疲劳 营养师推3食谱</a></li>
+<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/16/n12481202.md#1">换季流鼻水、皮肤痒？过敏自救有一套</a></li>
+<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12484089.md#1">两大一小的白鲸搁浅 俄罗斯男子花7小时营救</a></li>
+<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12486194.md#1">美里根号航母打击群返回南海 缩时短片释出</a></li>
+<li><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12483851.md#1">意大利小镇仅住2人 但坚持戴口罩保持距离</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/sjgjny386/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/sjgjny386/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/17/n12482137.htm">【最新疫情10.19】美加边境关闭延至11月</a></p><hr>
