--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -376,7 +376,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/8/n9817670.md#1" target="_blank">汉清：百年沧桑</a></li><li><a href="https://github.com/sjgjny386/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/6/30/n9338788.md#1" target="_blank">一张10年前的病历让湖北仙桃拘留所放人</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/23/n10735061.md#1" target="_blank">古玉文：窃国初期中共几十万干部争当陈世美</a></li><li><a href="https://github.com/sjgjny386/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/6/7/n9237316.md#1" target="_blank">对中国法轮功学员被迫害的调查（3）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
