--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12485442.md#1" title="华为大势已去？跨大西洋联盟打造清洁网络""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/000_8T3938-1-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12485256.md#1" title="川普抵加州橙县 上万选民海陆两地欢迎""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/2-5-1-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/sjgjny386/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://sjgjny386.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>20分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487392.md#1">被问是否担心粉丝流失 胡歌如是大气回应</a><br>
-:clock8: <em>22分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487592.md#1">黄脸白发扮卖饼阿婆 朱茵被黄贯中一眼认出</a><br>
-:clock8: <em>35分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487448.md#1">【直播预告】专访《蚕食美国》制片人</a><br>
-:clock8: <em>39分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12485249.md#1">加拿大华裔教授在中国三所大学任职引担忧</a><br>
-:clock8: <em>54分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487200.md#1">【役情最前线】江泽民老家数万螃蟹上岸</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487540.md#1">辗转台湾逃到德国 香港女大学生获庇护身份</a><br>
+:clock8: <em>11分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487480.md#1">【新闻看点】战狼变流氓 中共忙部署打台湾？</a><br>
+:clock8: <em>16分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487667.md#1">川普竞选团队：辩论委员会挑的主题偏拜登</a><br>
+:clock8: <em>38分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487392.md#1">被问是否担心粉丝流失 胡歌如是大气回应</a><br>
+:clock8: <em>40分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487592.md#1">黄脸白发扮卖饼阿婆 朱茵被黄贯中一眼认出</a><br>
+:clock8: <em>53分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487448.md#1">【直播预告】专访《蚕食美国》制片人</a><br>
+:clock8: <em>57分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12485249.md#1">加拿大华裔教授在中国三所大学任职引担忧</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12483904.md#1">【翻墙必看】习在京露面 分析：暴露诡异之处</a><br>
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12484117.md#1">涉习江斗还是怕“光明”光明乳业被罚引热议</a><br>
@@ -41,7 +41,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 365,856,857 人
+!共 365,858,489 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
@@ -113,10 +113,10 @@
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/11/n12468712.md#1">【独家】南海上演伤亡演习 美中针锋相对</a><br>
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/8/n12460942.md#1">【独家】揭秘大陆敢言网络大V凋零过程</a><br>
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/8/n12462796.md#1">【独家】公函泄疫情爆发比中共公布早数月</a><br>
-<br><p align="center"><a href="https://github.com/sjgjny386/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/8/6/n12310590.md#1">【医案】人间有味是清欢</a><br>
+<br><p align="center"><a href="https://github.com/sjgjny386/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/9/30/n12440579.md#1">《圣经》与《推背图》预言的应验与变换2</a><br>
+<a href="https://github.com/sjgjny386/djy/blob/master/gb/20/8/6/n12310590.md#1">【医案】人间有味是清欢</a><br>
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/14/n12475632.md#1">吕洞宾说因果：拒色戒淫 上天感应降福报</a><br>
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/9/17/n12411954.md#1">东西方地狱见闻 邪淫者的悲声</a><br>
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/16/n12480127.md#1">英国的企业家精神和美学品味</a><br>
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/2/n12446499.md#1">高贵的人格 超凡的勇气——记人权律师高智晟（上）</a><br>
-<a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/10/n12467270.md#1">【成吉思汗】建大蒙古国 封功臣 扩怯薛军</a><br>
 <br><p align="center"><a href="https://github.com/sjgjny386/djy/blob/master/gb/news2007.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/sjgjny386/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>大纪元重要书籍</strong></p></h2><a href="https://github.com/sjgjny386/djy/blob/master/gb/nf3541.md#1" target="_blank">《九评共产党》</a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/nf1235328.md#1" target="_blank">《共产主义的终极目的》</a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/nf1267582.md#1" target="_blank">《魔鬼在统治着我们的世界》</a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/nf3628.md#1" target="_blank">《解体党文化》</a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/nf1242535.md#1" target="_blank">《真实的江泽民》</a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/nf1138304.md#1" target="_blank">《中国历史正述》</a><br><a href="https://github.com/sjgjny386/djy/blob/master/gb/nf1076978.md#1" target="_blank">《千古英雄人物》</a><br><br><p align="center"><a href="https://github.com/sjgjny386/djy/blob/master/gb/nf3046.md#1">更多......</a></p></td></tr></table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/sjgjny386/djy/blob/master/gb/nf1351518.md#1<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/nf1351518.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/sjgjny386/djy/blob/master/gb/nf1351518.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf1351518.htm">https://www.epochtimes.com/gb/nf1351518.htm</a>    （国内需<a href="https://github.com/sjgjny386/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
