--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12485442.md#1" title="华为大势已去？跨大西洋联盟打造清洁网络""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/000_8T3938-1-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12485256.md#1" title="川普抵加州橙县 上万选民海陆两地欢迎""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/2-5-1-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/sjgjny386/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://sjgjny386.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>11分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487480.md#1">【新闻看点】战狼变流氓 中共忙部署打台湾？</a><br>
-:clock8: <em>16分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487667.md#1">川普竞选团队：辩论委员会挑的主题偏拜登</a><br>
-:clock8: <em>38分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487392.md#1">被问是否担心粉丝流失 胡歌如是大气回应</a><br>
-:clock8: <em>40分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487592.md#1">黄脸白发扮卖饼阿婆 朱茵被黄贯中一眼认出</a><br>
-:clock8: <em>53分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487448.md#1">【直播预告】专访《蚕食美国》制片人</a><br>
-:clock8: <em>57分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12485249.md#1">加拿大华裔教授在中国三所大学任职引担忧</a><br>
+:clock8: <em>24分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487480.md#1">【新闻看点】战狼变流氓 中共忙部署打台湾？</a><br>
+:clock8: <em>29分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487667.md#1">川普竞选团队：辩论委员会挑的主题偏拜登</a><br>
+:clock8: <em>50分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487392.md#1">被问是否担心粉丝流失 胡歌如是大气回应</a><br>
+:clock8: <em>53分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487592.md#1">黄脸白发扮卖饼阿婆 朱茵被黄贯中一眼认出</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/19/n12487448.md#1">【直播预告】专访《蚕食美国》制片人</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12485249.md#1">加拿大华裔教授在中国三所大学任职引担忧</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12483904.md#1">【翻墙必看】习在京露面 分析：暴露诡异之处</a><br>
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12484117.md#1">涉习江斗还是怕“光明”光明乳业被罚引热议</a><br>
@@ -28,7 +28,6 @@
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12483656.md#1">蓬佩奥：中共对美国构成非常独特挑战</a><br>
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12484144.md#1">北京租房市场量价齐跌 租金达两年低位</a><br>
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/14/n12476425.md#1">受中共科技专制拖累 科企出国路几近被堵死</a><br>
-<a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12484334.md#1">成都大学书记遗体告别式 校长未现身引关注</a><br>
 <br><p align="center"><a href="https://github.com/sjgjny386/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/18/n12483848.md#1">田云：电脑门发酵 拜登竞选经理自曝民调不实</a><br>
 <a href="https://github.com/sjgjny386/djy/blob/master/gb/20/10/14/n12474852.md#1">【内幕】吉林省应对美中贸易战措施曝光</a><br>
