--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -376,7 +376,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/3/15/n11942655.md#1" target="_blank">毛泽东73岁生日自杀的周小舟</a></li><li><a href="https://github.com/sjgjny386/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/4/30/n9092520.md#1" target="_blank">法轮大法洪传新西兰 20年点滴回顾</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/12/n10846318.md#1" target="_blank">共产暴政录：疯狂恐怖的“红八月”</a></li><li><a href="https://github.com/sjgjny386/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/1/n11559718.md#1" target="_blank">十一国殇日 港前区议员支持法轮功和平抗议</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
